infer-static-analysis/infer-out/report.txt
#0
example-src/example.c:5: error: Null Dereference
  `s` could be null (null value originating from line 4) and is dereferenced. 
  3. void test() {
  4.   int *s = NULL;
  5.   *s = 42;
       ^
  6. }

Found 1 issue
             Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULLPTR_DEREFERENCE): 1
